<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cam"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainDangNhap">
    <ImageView
        style="@style/dang_nhap_logo"/>
    <TextView
        android:text="@string/dang_nhap_qlam"
        style="@style/dang_nhap_chu1"/>
    <EditText
        android:id="@+id/edtTaiKhoan"
        style="@style/dang_nhap_chu2"
        android:hint="@string/nhap_tai_khoan"/>
    <EditText
        android:id="@+id/edtMatKhau"
        style="@style/dang_nhap_chu2"
        android:hint="@string/nhap_tai_khoan"/>
    <LinearLayout
        style="@style/dang_nhap_or">
        <Button
            android:id="@+id/btnDangNhap"
            android:drawableLeft="@drawable/ic_outline_language_24"
            style="@style/dang_nhap_button"
            android:text="@string/dang_nhap"
            />
        <Button
            android:drawableLeft="@drawable/vantay1"
            android:id="@+id/btnVanTay"
            style="@style/dang_nhap_button"
            android:text="@string/dau_van_tay"
            />
    </LinearLayout>
    <Button
        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
        android:id="@+id/btnThoat"
        style="@style/dang_nhap_button"
        android:layout_gravity="center"
        android:text="@string/thoat"
        />
</LinearLayout>